--- a/app/src/main/res/layout/activity_logowanie.xml
+++ b/app/src/main/res/layout/activity_logowanie.xml
@@ -82,6 +82,7 @@
         android:layout_width="373dp"
         android:layout_height="46dp"
         android:layout_marginTop="8dp"
+        android:onClick="rejestracja"
         android:text="Zarejestruj się"
         app:layout_constraintTop_toBottomOf="@+id/button9"
         tools:layout_editor_absoluteX="9dp" />
