--- a/app/src/main/res/layout/activity_add_income.xml
+++ b/app/src/main/res/layout/activity_add_income.xml
@@ -61,6 +61,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
+            android:onClick="sendValue"
             android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
