--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -113,6 +113,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
+        android:onClick="goToUserList"
         android:id="@+id/button6"
         android:layout_width="96dp"
         android:layout_height="80dp"
