--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,7 @@
         tools:layout_editor_absoluteY="8dp" />
 
     <Button
+        android:onClick="goToDodawaniePrzychodu"
         android:id="@+id/button2"
         android:layout_width="98dp"
         android:layout_height="76dp"
