--- a/app/src/main/res/layout/activity_rejestracja.xml
+++ b/app/src/main/res/layout/activity_rejestracja.xml
@@ -113,6 +113,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView20" />
 
     <Button
+        android:onClick="ZarejesstrujClick"
         android:id="@+id/button12"
         android:layout_width="366dp"
         android:layout_height="55dp"
