--- a/app/src/main/res/layout/activity_rejestracja_domostwa.xml
+++ b/app/src/main/res/layout/activity_rejestracja_domostwa.xml
@@ -92,6 +92,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
     <Button
+        android:onClick="ZarejetrujDom"
         android:id="@+id/button12"
         android:layout_width="366dp"
         android:layout_height="55dp"
