--- a/app/src/main/res/layout/activity_dodawanie_przychodu.xml
+++ b/app/src/main/res/layout/activity_dodawanie_przychodu.xml
@@ -157,6 +157,7 @@
 
 
     <CheckBox
+        android:visibility="invisible"
         android:id="@+id/checkBox"
         android:layout_width="208dp"
         android:layout_height="21dp"
