--- a/app/src/main/res/layout/activity_get_user_list.xml
+++ b/app/src/main/res/layout/activity_get_user_list.xml
@@ -11,24 +11,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/xml_pull_parser_file_url_editor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="http://swinkaskarbonka.somee.com/api/Skarbonka?fbclid=IwAR2eZodLWDsSwPD1Z5VwBxEUtFHGR_4CpjI_6fkZpEe1PnH9x3to2x7ileY"/>
-
-        <Button
-            android:onClick="getJson"
-            android:id="@+id/xml_pull_parser_parse_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Parse Xml Use Pull Parser"/>
-
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
+                android:textSize="30dp"
                 android:id="@+id/texvView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
